--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
 </head>
 <body>
     <!-- ============== header start here  ================== -->
-    <header>
-        
+    <header class="container header">
+        <div class="logo">
+            <img src="/assets/images/Logo.png" alt="">
+        </div>
+        <div class="nav">
+            <a href="#product">Product</a>
+            <a href="#pricing">Pricing</a>
+            <a href="#company">Company</a>
+            <a href="#resources">Resources</a>
+            <a href="#contact">Contact</a>
+        </div>
+        <div class="butns">
+            <a href="" class="login">Login</a>
+            <a href="" class="get_started">Get Started</a>
+        </div>
     </header>
     <!-- ============== header end here  ================== -->
      <!-- ============== banner start here  ================== -->
