--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Aspire - Home Page</title>
     <!-- Style Sheet Link  -->
     <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- icon-link-here -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- ============== header start here  ================== -->
@@ -25,9 +27,21 @@
             <a href="" class="get_started">Get Started</a>
         </div>
     </header>
+    <hr class="container">
     <!-- ============== header end here  ================== -->
      <!-- ============== banner start here  ================== -->
-    
+    <section class="container banner">
+        <div class="banner_text">
+            <h1>Multipurpose Website Templates
+              <br>  That boost your sales</h1>
+                <p>Empowering Your Financial Journey through Customized Asset Management Services</p>
+            </div>
+               <div class="form input">
+                <input type="email" placeholder="Enter your work email">
+                <a href="#" class="email_btn">Get Started</a>
+               </div>
+               <p class="end-tick"><i class="fa-solid fa-check"></i>No credit card required</p>
+    </section>
     <!-- ============== banner end here  ================== -->
      <!-- ============== trusted start here  ================== -->
     
